# agents

./: .gitignore  README.md  requirements.txt
.claude/: settings.local.json
agent-service/: .env  .env.example  pyproject.toml
agent-service/app/: main.py  schemas.py
agent-service/app/adversarial/: blue_agent.py  convergence.py  json_fallback.py  loop.py  red_agent.py
agent-service/app/agents/: base.py  cost_estimator.py  parcel_analyst.py  planner.py  policy_researcher.py  supply_planner.py  tool_agent.py
agent-service/app/clients/: java_client.py  llm_client.py
agent-service/app/collab/: edge_router.py  instrument.py  mode_router.py  protocol.py  registry.py  state_channel.py  vector_pool.py
agent-service/app/compression/: compressor.py  deduplicator.py  pipeline.py  protector.py  relevance_refilter.py
agent-service/app/eval/: bench.py  judge.py  metrics.py  stats.py
agent-service/app/local/: embedding.py  provider.py  reranker.py  retrieval_store.py  sandbox.py
agent-service/app/memory/: backends.py  layered.py  schema.py  security.py  store.py
agent-service/app/orchestrator/: dag.py  dynamic_orchestrator.py  scheduler.py  state_machine.py
agent-service/data/bench/: mini_bench.jsonl
agent-service/data/docs/: sample_land_policy.md  yuhang_cost_accounting.txt  yuhang_top_policy.txt
agent-service/scripts/: eval_all.py  init_db.py  stability_test.py  verify_modes.py
qianduan/: .thumbnail  dichan_agent_xietong.dc.html
