[project]
name = "deepnexus"
version = "0.1.0"
description = "DeepNexus Multi-Agent Deep Research System - Python Agent Orchestration Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "openai>=1.12.0",
    "ollama>=0.1.8",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "networkx>=3.2",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
